--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="portfolio">
 <head>
   <title>Servio's Portfolio</title>
+  <base href="/" />
 </head>
 <body>
 
+<ui-view></ui-view>
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.min.js"></script>
+<script type="text/javascript" src="/js/app.js"></script>
 </body>
 </html>
