--- a/public/views/index.html
+++ b/public/views/index.html
@@ -2,14 +2,36 @@
 <html ng-app="portfolio">
 <head>
   <title>Servio's Portfolio</title>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.0/foundation.min.css">
   <base href="/" />
 </head>
 <body>
 
+<div class="top-bar">
+  <div class="top-bar-title">
+    <h5>Portfolio</h5>
+  </div>
+  <div>
+    <div class="top-bar-left">
+       <ul class="menu">
+        <li><a href="/">Home</a></li>
+        <li><a href="#/about">About</a></li>
+        <li><a href="#/projects">Projects</a></li>
+      </ul>
+    </div><!-- End top-bar-left -->
+    <div class="top-bar-right"></div>
+  </div>
+</div>
+
 <div ui-view></div>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.min.js"></script>
+<footer></footer>
+
+
+<!-- Foundation JS -->
+<script src="https://cdn.jsdelivr.net/foundation/6.2.0/foundation.min.js"></script>
 <script type="text/javascript" src="/js/app.js"></script>
 </body>
 </html>
