minor style changes to get started

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,6 +5,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.0/foundation.min.css">
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
   <base href="/" />
 </head>
 <body>
@@ -21,7 +22,8 @@
         <li><a href="#/projects">Projects</a></li>
       </ul>
     </div><!-- End top-bar-left -->
-    <div class="top-bar-right"></div>
+    <div class="top-bar-right">
+    </div><!-- End top-bar-right -->
   </div>
 </div>
 
@@ -29,8 +31,8 @@
 
 <footer></footer>
 
-
-<!-- Foundation JS -->
+<!-- Javascripts -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/foundation/6.2.0/foundation.min.js"></script>
 <script type="text/javascript" src="/js/app.js"></script>
 </body>
