--- a/public/views/index.html
+++ b/public/views/index.html
@@ -12,7 +12,7 @@
 
 <div class="top-bar">
   <div class="top-bar-title">
-    <h5>Portfolio</h5>
+    <h5>Servio's Portfolio</h5>
   </div>
   <div>
     <div class="top-bar-left">
@@ -23,6 +23,16 @@
       </ul>
     </div><!-- End top-bar-left -->
     <div class="top-bar-right">
+      <ul class="dropdown menu" data-dropdown-menu>
+        <li>
+          <a href="#">Links</a>
+          <ul class="menu">
+            <li><a href="https://github.com/Serviox19" target="_blank">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/servio-mora-b93972108" target="_blank">LinkedIn</a></li>
+            <li><a href="" target="_blank">Twitter</a></li>
+          </ul>
+        </li>
+      </ul>
     </div><!-- End top-bar-right -->
   </div>
 </div>
@@ -35,5 +45,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/foundation/6.2.0/foundation.min.js"></script>
 <script type="text/javascript" src="/js/app.js"></script>
+<script type="text/javascript" src="/js/foundation.js"></script>
 </body>
 </html>
