--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,1 +1,6 @@
-<h1>This is the Home Page!</h1>
+<div class="row" ng-controller="homeCtrl">
+  <div class="small-12 medium-6">
+    <h1>This is the Home Page!</h1>
+  </div>
+</div>
+
