--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,20 +3,59 @@ body {
   color: white;
 }
 
-.container {
-  width: 700px;
+/*##############MEDIA QUERIES################*/
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: @screen-sm-min) {
+
 }
 
-.navbar ul li a{
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: @screen-md-min) {
+
+
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: @screen-lg-min) {
+
+
+}
+
+/*##############MEDIA QUERIES################*/
+
+
+/*#########NAVBAR#####################*/
+
+.navbar-default {
+  background-color:#333333;
+  color:#ffffff;
+  border-color: transparent;
+}
+
+.navbar-default .navbar-nav li a {
+  color: white;
+  &:hover {
+    color: blue;
+    background-color: transparent;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+  }
+}
+
+.navbar-default .navbar-nav li a:visited {
   color: white;
 }
 
-.navbar ul li a:hover{
-  background-color: transparent;
+.navbar-default .navbar-brand {
   color: white;
 }
+
+/*#############NAVBAR###################*/
 
 .jumbotron {
 background-image: url("../images/home.jpg");
 background-size: cover;
 }
+
