almost fnished with home page, lokks good.

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -8,19 +8,18 @@ body {
 /* Small devices (tablets, 768px and up) */
 @media (min-width: @screen-sm-min) {
 
+
 }
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: @screen-md-min) {
 
 
-}
-
-/* Large devices (large desktops, 1200px and up) */
-@media (min-width: @screen-lg-min) {
 
 
 }
+
+
 
 /*##############MEDIA QUERIES################*/
 
@@ -58,4 +57,25 @@ body {
 background-image: url("../images/home.jpg");
 background-size: cover;
 }
+
+.thumbnail img {
+  text-align: center;
+}
+
+.thumbnail h3, h5 {
+  text-align: center;
+}
+
+.caption p {
+  text-align: justify;
+}
+
+.img-circle {
+  margin-top: 15px;
+  height: 200px;
+  width: 200px;
+}
+
+
+
 
