--- a/public/views/skills.html
+++ b/public/views/skills.html
@@ -1,1 +1,125 @@
-<h1>This is the Skills Page!</h1>
+<div class="row">
+  <div class="col-md-12 col-xs-12">
+    <div class="container-fluid">
+      <div class="skills-title">
+      <h4>Tools &amp; Languages I use Every Day!</h4><hr>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-4 col-xs-12">
+    <div class="thumbnail">
+      <img src="" alt="">
+      <div class="caption">
+        <h3>HTML</h3>
+        <p class="skill-info">Very Comfortable with HTML, since this is where it all started.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 col-xs-12">
+    <div class="thumbnail">
+      <img src="" alt="">
+      <div class="caption">
+        <h3>CSS</h3>
+        <p class="skill-info">Familiar with styling with specifics in mind, as well as animations.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 col-xs-12">
+    <div class="thumbnail">
+      <img src="" alt="">
+      <div class="caption">
+        <h3>JavaScript</h3>
+        <p class="skill-info">Lots of Experience with JavaScript. Me being a Mean Stack developer, JavaScript is used everywhere, Front-End and Back-End</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-4 col-xs-12">
+    <div class="thumbnail">
+      <img src="" alt="">
+      <div class="caption">
+        <h3>jQuery</h3>
+        <p class="skill-info">Good with jQuery events and DOM manipulation</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 col-xs-12">
+    <div class="thumbnail">
+      <img src="" alt="">
+      <div class="caption">
+        <h3>Node.Js</h3>
+        <p class="skill-info">Very Good with the Node.Js back-end framework, as well as Express.Js.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 col-xs-12">
+    <div class="thumbnail">
+      <img src="" alt="">
+      <div class="caption">
+        <h3>Bootstrap</h3>
+        <p class="skill-info">Have used Bootstrap for many of my projects, I would say it's my favorite front end framework</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-4 col-xs-12">
+    <div class="thumbnail">
+      <img src="" alt="">
+      <div class="caption">
+        <h3>Angular.Js</h3>
+        <p class="skill-info">Love using Angular.Js, it is a powerful Front-End framework.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 col-xs-12">
+    <div class="thumbnail">
+      <img src="" alt="">
+      <div class="caption">
+        <h3>MongoDB</h3>
+        <p class="skill-info">Experience using MongoDB for most of my projects, MongoDB is my go to choice for Database</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 col-xs-12">
+    <div class="thumbnail">
+      <img src="" alt="">
+      <div class="caption">
+        <h3>MySQL</h3>
+        <p class="skill-info">Experience using MySQL.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-4 col-xs-12">
+    <div class="thumbnail">
+      <img src="" alt="">
+      <div class="caption">
+        <h3>Git</h3>
+        <p class="skill-info">Very familiar with Git version control, and very good at working it through the Terminal.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 col-xs-12">
+    <div class="thumbnail">
+      <img src="" alt="">
+      <div class="caption">
+        <h3>GitHub</h3>
+        <p class="skill-info">Frequently use GitHub to store my code and collaborate with peers on projects.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 col-xs-12">
+    <div class="thumbnail">
+      <img src="" alt="">
+      <div class="caption">
+        <h3>Heroku</h3>
+        <p class="skill-info">Constantly use Heroku to deploy all my Projects.</p>
+      </div>
+    </div>
+  </div>
+</div>
