--- a/public/views/home.html
+++ b/public/views/home.html
@@ -13,7 +13,7 @@
         <div class="caption">
           <h3>Servio Mora</h3>
           <h5>Full Stack Web Developer</h5>
-          <p>Hello, my name is Servio Mora, I am from Passaic, New Jersey. Welcome to my portfolio page, hope you like it. I am a Full Stack Web Developer with lots of experience builfing a web presence from the ground up. I have such a passion for Web Development, and I am glad that that is now my occupation. I am looking to land a position as a Web Developer to further engance my skills and abilities, and contribute to a team on a large scale. With hard work and determination, I know I will get there. Feel free to contact me!</p>
+          <p>Hello, my name is Servio Mora, I am from Passaic, New Jersey. Welcome to my portfolio page, hope you like it. I am a Full Stack Web Developer with lots of experience building a web presence from the ground up. I have such a passion for Web Development, and I am glad that it is now my occupation. I am looking to land a position as a Web Developer to further enhance my skills and abilities, and contribute to a team on a large scale. With hard work and determination, I know that I will get there. Feel free to contact me!</p>
         </div>
         <div id="social-links">
           <a target="_blank" href="https://github.com/Serviox19"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a><a target="_blank" href="https://www.linkedin.com/in/servio-mora-b93972108"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a><a target="_blank" href="https://twitter.com/Sciypher"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
