--- a/public/views/home.html
+++ b/public/views/home.html
@@ -6,8 +6,8 @@
 </div>
 <div class="row">
   <div class="col-md-12 col-sm-12">
-    <div class="col-md-3 hidden-xs"></div>
-    <div class="col-md-6 col-xs-12">
+    <div class="col-md-3 hidden-xs hidden-sm "></div>
+    <div class="col-xs-12 col-sm-8 col-sm-offset-2">
       <div class="thumbnail">
         <img class="img-circle img-responsive" src="../images/default.gif">
         <div class="caption">
@@ -20,7 +20,7 @@
         </div><hr class="link-rule">
       </div>
     </div>
-    <div class="col-md-3 hidden-xs"></div>
+    <div class="col-md-3 hidden-xs hidden-sm"></div>
   </div><br><br>
   <div class="footer">
     <h5>Copyright &copy; Servio Mora 2016</h5>
