--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,6 +1,7 @@
 body {
   background-color: #333333;
   color: white;
+  font-family: Bembo, Helvetica, Georgia, serif;
 }
 
 /*##############MEDIA QUERIES################*/
@@ -13,7 +14,6 @@ body {
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: @screen-md-min) {
-
 
 
 
@@ -54,7 +54,7 @@ body {
 /*#############NAVBAR###################*/
 
 .jumbotron {
-background-image: url("../images/home.jpg");
+background-image: url("https://dl.dropboxusercontent.com/s/a91qnc3fncdjvoj/home.jpg?dl=0");
 background-size: cover;
 }
 
