--- a/public/views/skills.html
+++ b/public/views/skills.html
@@ -8,27 +8,27 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-4 col-xs-12">
+  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
-      <img src="" alt="">
+      <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/glhhii5okh69adt/Cornmanthe3rd-Plex-Other-html-5.ico?dl=0" alt="">
       <div class="caption">
         <h3>HTML</h3>
         <p class="skill-info">Very Comfortable with HTML, since this is where it all started.</p>
       </div>
     </div>
   </div>
-  <div class="col-md-4 col-xs-12">
+  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
-      <img src="" alt="">
+      <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/1y4fcgdjhbrx6ug/css3%20.png?dl=0" alt="">
       <div class="caption">
         <h3>CSS</h3>
         <p class="skill-info">Familiar with styling with specifics in mind, as well as animations.</p>
       </div>
     </div>
   </div>
-  <div class="col-md-4 col-xs-12">
+  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
-      <img src="" alt="">
+      <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/d1wlpxfumxl36e8/javascript.png?dl=0" alt="">
       <div class="caption">
         <h3>JavaScript</h3>
         <p class="skill-info">Lots of Experience with JavaScript. Me being a Mean Stack developer, JavaScript is used everywhere, Front-End and Back-End</p>
@@ -37,85 +37,56 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-4 col-xs-12">
+  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
-      <img src="" alt="">
+      <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/ac18of7ui0kymvw/jquery.png?dl=0" alt="">
       <div class="caption">
         <h3>jQuery</h3>
         <p class="skill-info">Good with jQuery events and DOM manipulation</p>
       </div>
     </div>
   </div>
-  <div class="col-md-4 col-xs-12">
+  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
-      <img src="" alt="">
+      <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/3czk04opvgyoz4y/node.png?dl=0" alt="">
       <div class="caption">
         <h3>Node.Js</h3>
         <p class="skill-info">Very Good with the Node.Js back-end framework, as well as Express.Js.</p>
       </div>
     </div>
   </div>
-  <div class="col-md-4 col-xs-12">
+  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
-      <img src="" alt="">
-      <div class="caption">
-        <h3>Bootstrap</h3>
-        <p class="skill-info">Have used Bootstrap for many of my projects, I would say it's my favorite front end framework</p>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-4 col-xs-12">
-    <div class="thumbnail">
-      <img src="" alt="">
+      <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/b9wndrnzhfm0ita/angular.png?dl=0" alt="">
       <div class="caption">
         <h3>Angular.Js</h3>
         <p class="skill-info">Love using Angular.Js, it is a powerful Front-End framework.</p>
       </div>
     </div>
   </div>
-  <div class="col-md-4 col-xs-12">
+</div>
+<div class="row">
+  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
-      <img src="" alt="">
+      <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/4vtc5i67e6mvbo5/mongodb.png?dl=0" alt="">
       <div class="caption">
         <h3>MongoDB</h3>
         <p class="skill-info">Experience using MongoDB for most of my projects, MongoDB is my go to choice for Database</p>
       </div>
     </div>
   </div>
-  <div class="col-md-4 col-xs-12">
+  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
-      <img src="" alt="">
+      <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/ditpzh6ul6hk9u6/mysql.png?dl=0" alt="">
       <div class="caption">
         <h3>MySQL</h3>
         <p class="skill-info">Experience using MySQL.</p>
       </div>
     </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-md-4 col-xs-12">
+  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
-      <img src="" alt="">
-      <div class="caption">
-        <h3>Git</h3>
-        <p class="skill-info">Very familiar with Git version control, and very good at working it through the Terminal.</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-4 col-xs-12">
-    <div class="thumbnail">
-      <img src="" alt="">
-      <div class="caption">
-        <h3>GitHub</h3>
-        <p class="skill-info">Frequently use GitHub to store my code and collaborate with peers on projects.</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-4 col-xs-12">
-    <div class="thumbnail">
-      <img src="" alt="">
+      <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/9ij1cmansnhev4b/heroku.jpg?dl=0" alt="">
       <div class="caption">
         <h3>Heroku</h3>
         <p class="skill-info">Constantly use Heroku to deploy all my Projects.</p>
@@ -123,3 +94,4 @@
     </div>
   </div>
 </div>
+
