started projects page, still needs preview image for projects

--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -1,2 +1,47 @@
-<h1>Projects!</h1>
+<div class="row">
+  <div class="col-md-12 col-xs-12">
+    <div class="container-fluid">
+      <div class="skills-title">
+        <h4>View My Projects!</h4><hr>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+    <div class="thumbnail">
+      <img src="" alt="">
+      <div class="caption">
+        <h3>Find a Doc!</h3>
+        <p></p>
+        <p class="project-links"><a target="_blank" class="btn btn-default" href="https://cims-med-chinmay.herokuapp.com">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default" href="https://github.com/Mark-A-A/CIMS">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
+      </div>
+    </div>
+    <div class="thumbnail">
+      <img src="" alt="">
+      <div class="caption">
+        <h3>Mora Sports</h3>
+        <p></p>
+        <p class="project-links"><a target="_blank" class="btn btn-default" href="">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default" href="https://github.com/Serviox19/Sports-App">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
+      </div>
+    </div>
+    <div class="thumbnail">
+      <img src="" alt="">
+      <div class="caption">
+        <h3>Rock, Paper, Scissors</h3>
+        <p></p>
+        <p class="project-links"><a target="_blank" class="btn btn-default" href="">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default" href="https://github.com/Serviox19/Rock-Papers-Scissors">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
+      </div>
+    </div>
+    <div class="thumbnail">
+      <img src="" alt="">
+      <div class="caption">
+        <h3>Click Game</h3>
+        <p></p>
+        <p class="project-links"><a target="_blank" class="btn btn-default" href="">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default" href="https://github.com/Serviox19/Click-Game">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
+      </div>
+    </div>
+  </div>
+</div>
 
