--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,7 +1,8 @@
 body {
-  background-color: #333333;
-  color: white;
-  font-family: Bembo, Helvetica, Georgia, serif;
+  background-color: #DEDEDE;
+  color: black;
+  font-family: Helvetica, Verdana, serif;
+  font-size: 14px;
 }
 
 /*##############MEDIA QUERIES################*/
@@ -16,9 +17,13 @@ body {
 @media (min-width: @screen-md-min) {
 
 
-
 }
 
+
+@media (min-width: @screen-lg-min) {
+
+
+}
 
 
 /*##############MEDIA QUERIES################*/
@@ -27,13 +32,14 @@ body {
 /*#########NAVBAR#####################*/
 
 .navbar-default {
-  background-color:#333333;
-  color:#ffffff;
+  background-color:#DEDEDE;
+  color: black;
   border-color: transparent;
 }
 
 .navbar-default .navbar-nav li a {
-  color: white;
+  color: black;
+  font-size: 20px;
   &:hover {
     color: blue;
     background-color: transparent;
@@ -44,11 +50,16 @@ body {
 }
 
 .navbar-default .navbar-nav li a:visited {
-  color: white;
+  color: black;
+}
+
+.navbar-default .navbar-nav li a:active {
+  color: black;
 }
 
 .navbar-default .navbar-brand {
-  color: white;
+  color: black;
+  font-size: 25px;
 }
 
 /*#############NAVBAR###################*/
@@ -58,6 +69,10 @@ background-image: url("https://dl.dropboxusercontent.com/s/a91qnc3fncdjvoj/home.
 background-size: cover;
 }
 
+.jumbotron h1 {
+  color: white;
+}
+
 
 .thumbnail img {
   text-align: center;
@@ -65,6 +80,10 @@ background-size: cover;
 
 .thumbnail h3, h5 {
   text-align: center;
+}
+
+.thumbnail .caption h3, h5, p {
+  color: black;
 }
 
 .caption {
@@ -91,13 +110,19 @@ background-size: cover;
 }
 
 #social-links a {
-  color: #929292;
+  color: black;
   width: 50px;
   display: inline-block;
 }
 
-.link-rule {
-  color: #929292;
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
+  color: black;
 }
 
 
