--- a/public/css/skills.css
+++ b/public/css/skills.css
@@ -13,6 +13,18 @@
 
 .skills-title h4 {
   text-align: center;
+  font-size: 30px;
+  font-weight: unset;
+}
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
+  background-color: black;
 }
 
 /* Title for each Technology */
