--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <div class="container">
     <h1>My<br>Portfolio</h1>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Resume</a></p>
+    <p><a target="_blank" class="btn btn-primary btn-lg" href="https://dl.dropboxusercontent.com/s/v5m6ozdq4rlj3i6/Servio%20Mora%20Developer.pdf?dl=0">Resume&nbsp;&nbsp;<span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span></a></p>
   </div>
 </div>
 <div class="row">
