added content to projects page

--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -11,37 +11,57 @@
 <div class="row">
   <div class="col-xs-12 col-sm-8 col-sm-offset-2">
     <div class="thumbnail">
-      <img src="" alt="">
+      <h3>Find a Doc!</h3>
+      <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/vr5rywmppv7ht13/cims.png?dl=0">
       <div class="caption">
-        <h3>Find a Doc!</h3>
-        <p></p>
-        <p class="project-links"><a target="_blank" class="btn btn-default" href="https://cims-med-chinmay.herokuapp.com">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default" href="https://github.com/Mark-A-A/CIMS">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
-      </div>
-    </div>
-    <div class="thumbnail">
-      <img src="" alt="">
-      <div class="caption">
-        <h3>Mora Sports</h3>
-        <p></p>
-        <p class="project-links"><a target="_blank" class="btn btn-default" href="">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default" href="https://github.com/Serviox19/Sports-App">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
-      </div>
-    </div>
-    <div class="thumbnail">
-      <img src="" alt="">
-      <div class="caption">
-        <h3>Rock, Paper, Scissors</h3>
-        <p></p>
-        <p class="project-links"><a target="_blank" class="btn btn-default" href="">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default" href="https://github.com/Serviox19/Rock-Papers-Scissors">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
-      </div>
-    </div>
-    <div class="thumbnail">
-      <img src="" alt="">
-      <div class="caption">
-        <h3>Click Game</h3>
-        <p></p>
-        <p class="project-links"><a target="_blank" class="btn btn-default" href="">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default" href="https://github.com/Serviox19/Click-Game">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
+        <p>Group project I contributed to as part of our Final Project for our Bootcamp.</p>
+        <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="https://cims-med-chinmay.herokuapp.com">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Mark-A-A/CIMS">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
       </div>
     </div>
   </div>
 </div>
+<div class="row">
+  <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+    <div class="thumbnail">
+      <h3>Mora Sports</h3>
+      <div class="row">
+        <div class="col-xs-6 col-sm-6 col-md-6">
+          <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/r9jy9qowei7jzas/sports-app.png?dl=0">
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-6">
+          <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/s3jniyzzhdrnggl/sports-app-nav.png?dl=0">
+        </div>
+      </div>
+      <div class="caption sports-caption">
+        <p>This is a Personal Side project I made to display my love for sports, when you click a sport, information gets scraped from a reliable source to display latest news.</p>
+        <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="https://mora-sports.herokuapp.com">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Serviox19/Sports-App">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+    <div class="thumbnail">
+      <img class="img-responsive project-pic" src="">
+      <div class="caption">
+        <h3>Rock, Paper, Scissors</h3>
+        <p></p>
+        <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Serviox19/Rock-Papers-Scissors">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+    <div class="thumbnail">
+      <img class="img-responsive project-pic" src="">
+      <div class="caption">
+        <h3>Click Game</h3>
+        <p></p>
+        <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Serviox19/Click-Game">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
+      </div>
+    </div>
+  </div>
+</div>
+
 
