--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -1,3 +1,12 @@
 .btn btn-default {
+  padding-right: 20px;
+}
 
+.project-pic {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+.sports-caption {
+  padding-top: 10px;
 }
