finished with projects page, just need to style a bit more

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -12,7 +12,7 @@
         <img class="img-circle img-responsive" src="../images/default.gif">
         <div class="caption">
           <h3>Servio Mora</h3>
-          <h5>Full Stack Web Developer</h5>
+          <h5 style="font-weight: bold;">Full Stack Web Developer</h5>
           <p>Hello, my name is Servio Mora, I am from Passaic, New Jersey. Welcome to my portfolio page, hope you like it. I am a Full Stack Web Developer with lots of experience building a web presence from the ground up. I have such a passion for Web Development, and I am glad that it is now my occupation. I am looking to land a position as a Web Developer to further enhance my skills and abilities, and contribute to a team on a large scale. With hard work and determination, I know that I will get there. Feel free to contact me!</p>
         </div>
         <div id="social-links">
