--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="caption sports-caption">
-        <p>This is a Personal Side project I made to display my love for sports, when you click a sport, information gets scraped from a reliable source to display latest news.</p>
+        <p>This is a Personal Side project I made to display my love for sports, when you click a sport, information gets scraped from a reliable source to display latest news as they are published.</p>
         <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="https://mora-sports.herokuapp.com">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Serviox19/Sports-App">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
       </div>
     </div>
@@ -42,11 +42,11 @@
 <div class="row">
   <div class="col-xs-12 col-sm-8 col-sm-offset-2">
     <div class="thumbnail">
-      <img class="img-responsive project-pic" src="">
+      <h3>Rutgers Flyer</h3>
+      <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/ajm2sbc7x6jzu0p/Screenshot%202016-04-27%2013.33.04.png?dl=0">
       <div class="caption">
-        <h3>Rock, Paper, Scissors</h3>
-        <p></p>
-        <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Serviox19/Rock-Papers-Scissors">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
+        <p>Theres alot of things to see, eat, and do at Rutgers. Come see all the posibilities.</p>
+        <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Serviox19/Rutgers_Flyer_New">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
       </div>
     </div>
   </div>
@@ -54,14 +54,15 @@
 <div class="row">
   <div class="col-xs-12 col-sm-8 col-sm-offset-2">
     <div class="thumbnail">
-      <img class="img-responsive project-pic" src="">
+      <h3>Rock, Paper, Scissors</h3>
+      <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/6iqn4jfvvzylhed/Screenshot%202016-04-27%2012.51.38.png?dl=0">
       <div class="caption">
-        <h3>Click Game</h3>
-        <p></p>
-        <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Serviox19/Click-Game">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
+        <p>This is one of my early projects, a Rock, Papers, Scissors game using JavaScript, jQuery, and CSS to provide game logic aand styling.</p>
+        <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="https://servio-rps.herokuapp.com/">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Serviox19/Rock-Papers-Scissors">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
       </div>
     </div>
   </div>
 </div>
+
 
 
