added picture of myself

--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col-xs-12 col-sm-8 col-sm-offset-2">
     <div class="thumbnail">
-      <h3>Find a Doc!</h3>
+      <h3>CIMS Med.</h3>
       <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/vr5rywmppv7ht13/cims.png?dl=0">
       <div class="caption">
         <p>Group project I contributed to as part of our Final Project for our Bootcamp.</p>
