--- a/public/views/home.html
+++ b/public/views/home.html
@@ -9,7 +9,7 @@
     <div class="col-md-3 hidden-xs hidden-sm "></div>
     <div class="col-xs-12 col-sm-8 col-sm-offset-2">
       <div class="thumbnail">
-        <img class="img-circle img-responsive" src="../images/default.gif">
+        <img class="img-circle img-responsive" src="https://dl.dropboxusercontent.com/s/e3pw0dq21rcllxi/head-shot.jpg?dl=0">
         <div class="caption">
           <h3>Servio Mora</h3>
           <h5 style="font-weight: bold;">Full Stack Web Developer</h5>
