fixed typo on projects page

--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -57,12 +57,9 @@
       <h3>Rock, Paper, Scissors</h3>
       <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/6iqn4jfvvzylhed/Screenshot%202016-04-27%2012.51.38.png?dl=0">
       <div class="caption">
-        <p>This is one of my early projects, a Rock, Papers, Scissors game using JavaScript, jQuery, and CSS to provide game logic aand styling.</p>
+        <p>This is one of my early projects, a Rock, Papers, Scissors game using JavaScript, jQuery, and CSS to provide game logic and styling.</p>
         <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="https://servio-rps.herokuapp.com/">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Serviox19/Rock-Papers-Scissors">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
       </div>
     </div>
   </div>
 </div>
-
-
-
