--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -15,7 +15,7 @@
       <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/vr5rywmppv7ht13/cims.png?dl=0">
       <div class="caption">
         <p>Group project I contributed to as part of our Final Project for our Bootcamp.</p>
-        <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="https://cims-med-chinmay.herokuapp.com">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Mark-A-A/CIMS">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
+        <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="https://cims-health.herokuapp.com">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Mark-A-A/CIMS">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
       </div>
     </div>
   </div>
