fixed alignment of skills page to center correctly

--- a/public/views/skills.html
+++ b/public/views/skills.html
@@ -8,7 +8,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
+  <div class="col-md-4 col-md-offset-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
       <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/glhhii5okh69adt/Cornmanthe3rd-Plex-Other-html-5.ico?dl=0" alt="">
       <div class="caption">
@@ -17,7 +17,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
+  <div class="col-md-4 col-md-offset-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
       <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/1y4fcgdjhbrx6ug/css3%20.png?dl=0" alt="">
       <div class="caption">
@@ -26,7 +26,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
+  <div class="col-md-4 col-md-offset-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
       <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/d1wlpxfumxl36e8/javascript.png?dl=0" alt="">
       <div class="caption">
@@ -37,7 +37,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
+  <div class="col-md-4 col-md-offset-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
       <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/ac18of7ui0kymvw/jquery.png?dl=0" alt="">
       <div class="caption">
@@ -46,7 +46,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
+  <div class="col-md-4 col-md-offset-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
       <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/3czk04opvgyoz4y/node.png?dl=0" alt="">
       <div class="caption">
@@ -55,7 +55,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
+  <div class="col-md-4 col-md-offset-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
       <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/b9wndrnzhfm0ita/angular.png?dl=0" alt="">
       <div class="caption">
@@ -66,7 +66,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
+  <div class="col-md-4 col-md-offset-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
       <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/4vtc5i67e6mvbo5/mongodb.png?dl=0" alt="">
       <div class="caption">
@@ -75,7 +75,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
+  <div class="col-md-4 col-md-offset-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
       <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/ditpzh6ul6hk9u6/mysql.png?dl=0" alt="">
       <div class="caption">
@@ -84,7 +84,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-4 col-xs-12 col-sm-6 col-sm-offset-3">
+  <div class="col-md-4 col-md-offset-4 col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="thumbnail">
       <img class="img-responsive tools" src="https://dl.dropboxusercontent.com/s/9ij1cmansnhev4b/heroku.jpg?dl=0" alt="">
       <div class="caption">
