changed images for sports app demo

--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -26,10 +26,10 @@
       <h3>Mora Sports</h3>
       <div class="row">
         <div class="col-xs-6 col-sm-6 col-md-6">
-          <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/r9jy9qowei7jzas/sports-app.png?dl=0">
+          <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/9nwub9e4f5owdsb/PSX_20160621_004807.jpg?dl=0">
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6">
-          <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/s3jniyzzhdrnggl/sports-app-nav.png?dl=0">
+          <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/ulkow3kh1o8itd8/PSX_20160621_004935.jpg?dl=0">
         </div>
       </div>
       <div class="caption sports-caption">
