changed description for one project

--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -14,7 +14,7 @@
       <h3>CIMS Med.</h3>
       <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/vr5rywmppv7ht13/cims.png?dl=0">
       <div class="caption">
-        <p>Group project I contributed to as part of our Final Project for our Bootcamp.</p>
+        <p>This application allows users to search for Doctors based on location, specialty, etc. This is a Full Stack application using Javascript, and Javascript Frameworks to power the Front-End and Back-End.</p>
         <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="https://cims-health.herokuapp.com">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Mark-A-A/CIMS">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
       </div>
     </div>
