--- a/public/css/home.css
+++ b/public/css/home.css
@@ -66,9 +66,9 @@ body {
 
 .banner {
 width: 100%;
-height: 500px;
+height: 450px;
 background-image: url("https://dl.dropboxusercontent.com/s/ztflhby6i8jgd4l/coding-699395.jpg?dl=0");
-background-size: cover;
+background-size: 100% auto;
 background-repeat: no-repeat;
 background-position: 50% 50%;
 }
