--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,6 +1,4 @@
-<div class="banner">
-  <p><a target="_blank" class="btn btn-primary btn-lg" href="https://dl.dropboxusercontent.com/s/j55k6mkhe3d4alw/Servio%20Mora%20Developer.docx?dl=0">Resume&nbsp;&nbsp;<span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span></a></p>
-</div>
+<div class="banner"></div>
 <div class="row">
   <div class="col-md-12 col-sm-12">
     <div class="col-md-3 hidden-xs hidden-sm "></div>
@@ -13,7 +11,8 @@
           <p>Hello, my name is Servio Mora, I am from Passaic, New Jersey. Welcome to my portfolio page, hope you like it. I am a Full Stack Web Developer with lots of experience building a web presence from the ground up. I have such a passion for Web Development, and I am glad that it is now my occupation. I am looking to land a position as a Web Developer to further enhance my skills and abilities, and contribute to a team on a large scale. With hard work and determination, I know that I will get there. Feel free to contact me!</p>
         </div>
         <div id="social-links">
-          <a target="_blank" href="https://github.com/Serviox19"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a><a target="_blank" href="https://www.linkedin.com/in/servio-mora-b93972108"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a><a target="_blank" href="https://twitter.com/Sciypher"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+          <a target="_blank" href="https://github.com/Serviox19"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a><a target="_blank" href="https://www.linkedin.com/in/servio-mora-b93972108"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a><a target="_blank" href="https://twitter.com/Sciypher"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a><br>
+          <a href="https://dl.dropboxusercontent.com/s/j55k6mkhe3d4alw/Servio%20Mora%20Developer.docx?dl=0" title="Download Resume" id="resume"><span><i class="fa fa-download fa-2x" aria-hidden="true"></i></span></a>
         </div><hr class="link-rule">
       </div>
     </div>
