--- a/public/css/home.css
+++ b/public/css/home.css
@@ -7,6 +7,11 @@ body {
 
 /*##############MEDIA QUERIES################*/
 
+@media (min-width: @screen-xs-min) {
+
+
+}
+
 /* Small devices (tablets, 768px and up) */
 @media (min-width: @screen-sm-min) {
 
@@ -65,12 +70,13 @@ body {
 /*#############NAVBAR###################*/
 
 .banner {
-width: 100%;
-height: 450px;
-background-image: url("https://dl.dropboxusercontent.com/s/ztflhby6i8jgd4l/coding-699395.jpg?dl=0");
-background-size: 100% auto;
-background-repeat: no-repeat;
-background-position: 50% 50%;
+  width: 100%;
+  height: 500px;
+  background-image: url("https://dl.dropboxusercontent.com/s/ztflhby6i8jgd4l/coding-699395.jpg?dl=0");
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  opacity: 0.7;
 }
 
 .banner h1 {
@@ -127,6 +133,12 @@ hr {
   margin: 1em 0;
   padding: 0;
   color: black;
+}
+
+#resume {
+  display: inline-block;
+  margin-top: 20px;
+  text-decoration: none;
 }
 
 
