--- a/public/css/home.css
+++ b/public/css/home.css
@@ -69,15 +69,22 @@ body {
 
 /*#############NAVBAR###################*/
 
-.banner {
+.responsive-image{
+  width: 100%;
+  max-height: 640px;
+  background-size: 100% 100%;
+  opacity: 0.6
+}
+
+/*.banner {
   width: 100%;
   height: 500px;
   background-image: url("https://dl.dropboxusercontent.com/s/ztflhby6i8jgd4l/coding-699395.jpg?dl=0");
-  background-size: 100% auto;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
   opacity: 0.7;
-}
+}*/
 
 .banner h1 {
   color: white;
