--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,5 @@
-<div class="banner"></div>
+<!-- <div class="banner"></div> -->
+<img src="https://dl.dropboxusercontent.com/s/ztflhby6i8jgd4l/coding-699395.jpg?dl=0" class="responsive-image">
 <div class="row">
   <div class="col-md-12 col-sm-12">
     <div class="col-md-3 hidden-xs hidden-sm "></div>
