--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,27 +13,87 @@
   color: #FFFAFA;
 }
 
-.navbar {
-  background-color: transparent;
-  border: none;
-}
-
-.navbar .navbar-brand {
-}
-
-.navbar .navbar-nav li a, a:visited {
-  font-size: 1.5em;
-  color: black;
-}
-
-.navbar .navbar-nav li a:hover {
-  color: blue;
-}
-
 body {
   background: #FFF5EE;
 }
 
-#row1 {
-  margin-top: 50px;
+/* ########## NAVBAR STUFF ########### */
+
+.navbar {
+  width: 100%;
+  height: 80px;
+  margin: 0;
+  border-radius: 0;
+  overflow: hidden;
+  background-color: #3b8dbd;
+}
+
+.navbar h1#logo {
+  display: inline-block;
+  height: 80px;
+  float: left;
+  margin-left:50px;
+  font-size: 30px;
+  color: white;
+  font-weight: 400;
+}
+
+.navbar nav {
+  display: inline-block;
+  float: right;
+  margin-right: 50px;
+}
+
+.navbar nav a {
+  line-height: 80px;
+  margin-left: 20px;
+  color: #9fdbfc;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.navbar nav a:hover {
+  color: #FFFAFA;
+  text-decoration: none;
+  font-size: 1.5em;
+}
+
+.navbar-fixed {
+  top: 0;
+  z-index: 100;
+  position: fixed;
+  width: 100%;
+}
+
+/* ########## NAVBAR STUFF ########### */
+
+.about {
+  padding-bottom: 25px;
+}
+
+#aboutRow {
+  margin-top: 25px;
+  margin-bottom: inherit;
+}
+
+.about img {
+  width: 320px;
+  height: 400px;
+  border: 5px solid black;
+}
+
+.aboutMe h3 {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.aboutMe p {
+  text-align: justify;
+  /*font-size: 1.2em;*/
+  font-weight: 480;
+}
+
+.resume {
+  padding-top: 15px;
 }
