added navbar and removed hashtags from url on click

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -229,3 +229,36 @@ body {
 }
 
 /* ########## END PROJECTS STUFF ########### */
+
+
+
+/* ########## FOOTER ########### */
+
+.footer {
+  height: 70px;
+  background-color: #4682B4;
+  text-align: center;
+}
+
+.footer .links {
+  display: inline-block;
+}
+
+.links a {
+  color: black;
+  text-decoration: none;
+  line-height: 70px;
+  font-size: 40px;
+  vertical-align: middle;
+}
+
+.links a:hover {
+  color: #FFFAFA;
+}
+
+.linkedin {
+  padding: 0 15px;
+}
+
+
+/* ########## END FOOTER ########### */
