--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@
 }
 
 .header h1 {
+  display: none;
   color: #FFFAFA;
   font-size: 50px;
   font-weight: 500;
@@ -30,7 +31,7 @@ body {
   background-color: #4682B4;
 }
 
-.navbar h1#logo {
+.navbar h1 {
   display: inline-block;
   height: 70px;
   float: left;
